Add UserProfile and Structure entities; refactor agency code handling and ticket reconciliation logic